kubernetes/api/fastapi-sandbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-sandbox-service
spec:
  selector:
    app: fastapi-sandbox
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
